--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -1,31 +1,27 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
       List
     </ion-title>
+    <ion-buttons slot="end">
+      <ion-icon name="trash" class="tool-bar-delete-button" (click)="doDelete()"></ion-icon>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
-
 <ion-content>
   <ion-list>
     <ion-item *ngFor="let item of items">
+      <ion-icon *ngIf="!isDeleteButtonSelected" (click)="editItem(item)" name="create" slot="start"></ion-icon>
+      <ion-checkbox *ngIf="isDeleteButtonSelected" color="secondary" [(ngModel)]="item.isMarkedForDeletion"
+        (click)="trackSelection(item)" slot="start">
+      </ion-checkbox>
       <div>
         <p (click)="openItem(item)">{{item.noteTitle}}</p>
         <p>{{item.noteDescription | slice:0:30}}...</p>
       </div>
-      <!-- <ion-icon [name]="item.icon" slot="start"></ion-icon>
-      {{item.title}}
-      <div class="item-note" slot="end">
-        {{item.note}}
-      </div> -->
     </ion-item>
   </ion-list>
-  <!--
-    <div *ngIf="selectedItem" padding>
-      You navigated here from <b>{{selectedItem.title }}</b>
-    </div>
-  -->
 </ion-content>
