--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -1,9 +1,7 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title>register</ion-title>
   </ion-toolbar>
 </ion-header>
-
 <ion-content padding>
-
 </ion-content>
