code changes towards registration module
code changes towards registration module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,13 @@
       <ion-content>
         <ion-list>
           <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
-            <ion-item [routerDirection]="'root'" [routerLink]="[p.url]" (click)="p.handler()">
+            <ion-item *ngIf="p.handler" (click)="p.handler()">
+              <ion-icon slot="start" [name]="p.icon"></ion-icon>
+              <ion-label>
+                {{p.title}}
+              </ion-label>
+            </ion-item>
+            <ion-item *ngIf="!p.handler" [routerDirection]="'root'" [routerLink]="[p.url]">
               <ion-icon slot="start" [name]="p.icon"></ion-icon>
               <ion-label>
                 {{p.title}}
