--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -7,14 +7,13 @@
   <form [formGroup]="credentialsForm" (ngSubmit)="onSubmit()">
     <ion-item>
       <ion-label position="floating">Email</ion-label>
-      <ion-input type="email" formControlName="email"></ion-input>
+      <ion-input type="email" formControlName="username"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Password</ion-label>
       <ion-input type="password" formControlName="password"></ion-input>
     </ion-item>
     <ion-button expand="full" type="submit" [disabled]="!credentialsForm.valid">Login</ion-button>
-    <ion-button expand="full" type="button" (click)="register()" [disabled]="!credentialsForm.valid">Register
-    </ion-button>
+
   </form>
 </ion-content>
