code changes towards create note, login, register, forgot password functionality
code changes towards create note, login, register, forgot password functionality

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,6 +7,9 @@
       Home
     </ion-title>
   </ion-toolbar>
+  <ion-toolbar *ngIf="authService && authService.user">
+    <ion-title>Welcome {{authService?.user?.authenticatedUserName}}</ion-title>
+  </ion-toolbar>
 </ion-header>
 <ion-content>
   <ion-card class="welcome-card">
