--- a/src/app/edit-note/add-notes-tag/add-notes-tag.component.scss
+++ b/src/app/edit-note/add-notes-tag/add-notes-tag.component.scss
@@ -15,3 +15,10 @@
 .width99 {
   width: 99%;
 }
+
+::ng-deep .add-circle-container {
+  .item-inner {
+    border: 0px solid white !important;
+    margin-top: 5px !important;
+  }
+}
