--- a/src/app/list/list.page.scss
+++ b/src/app/list/list.page.scss
@@ -1,4 +1,8 @@
-
-.tool-bar-delete-button {
-    font-size: 20px;
-    }
+.tool-bar-icon {
+  font-size: 20px;
+}
+ion-note {
+  clear: both;
+  position: absolute;
+  bottom: 2px;
+}
