--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -16,7 +16,7 @@
 </ion-header>
 <ion-content>
   <app-no-documents-page *ngIf="!notesExist"></app-no-documents-page>
-  <ion-content *ngIf="!newTagIdentified">
+  <ion-content>
     <ion-grid *ngIf="notesExist">
       <ion-row>
         <ion-col size="10">
